@@ -12,11 +12,12 @@ end
 
 # SOF2 public master: master.sof2.ravensoft.com
 # The 2003 protocol is for SOF2 1.01
+# The 2004 protocol is for SOF2 1.02
 gametype SOF2M new extend Q3M
     name = SOF2 Master
     default port = 20110
     template var = SOF2MASTER
-    master protocol = 2003
+    master protocol = 2004
     master query = SOF2FULL
     master for gametype = sof2s
 end
