@@ -1,3 +1,12 @@
+Sun Feb 23 10:52:18 PST 2003
+
+Added $SCORE for player score
+Fixed XML escaping bugs
+Fixed repeated rule values from UT2003 servers
+Fixed excessive retries to UT2003 servers that set minplayers
+Fixed reported # players for UT2003 server that set minplayers
+Changed sof2m default protocol to 2004 (SOF 1.02)
+
 Tue Jan  7 16:24:57 PST 2003
 
 Fixed manual compile instructions in COMPILE.txt
